--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
   <footer class="border-top container">
     <div class="col-12 mt-5">
       <span class="text-muted">2026 - Juan Alonso / kokuma</span>
-      <a class="text-muted ms-4" href="https://github.com/juanalonso" target="_blank"><i class="bi bi-github"></i></a>
+      <a class="text-muted ms-4" href="https://github.com/juanalonso/rejilla" target="_blank"><i
+          class="bi bi-github"></i></a>
       <a class="text-muted ms-4" href="https://bsky.app/profile/kokuma.bsky.social" target="_blank"><i
           class="bi bi-bluesky"></i></a>
   </footer>
