Vista previa de la rejilla

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
     <h1 class="mb-5">Generador de Rejillas de Cardano</h1>
 
 
-
     <div class="row mb-5">
 
       <div class="col-12">
@@ -72,21 +71,28 @@
             exacto de un Post-it,
             así que podrás dejar notas adhesivas secretas por doquier: en el monitor de alguien, en la nevera,
             dentro de un libro o en la tapa del portátil.</p>
+
         </div>
       </div>
-
     </div>
 
 
 
-    <div class="row justify-content-center mb-5">
-      <div class="col-8">
-        <button id="btn" class="btn btn-lg btn-primary w-100 p-3">Generar y descargar STL</button>
+    <div class="row justify-content-center mb-5 bg-light rounded p-4">
+      <div class="col-12 mb-3 ">
+        <p class="lead text-center">Haz click sobre la rejilla para generar otra, pulsa el botón para
+          descargar el fichero STL.</p>
+      </div>
+      <div class="col-auto">
+        <div id="grid-preview" class="p-2 bg-primary"></div>
+      </div>
+      <div class="col-10 col-md-5 col-xl-4">
+        <button id="btn" class="btn btn-lg btn-primary w-100 mt-3 p-3">Descargar STL</button>
       </div>
     </div>
 
-
   </div>
+
 
   <footer class="border-top container">
     <div class="col-12 mt-5">
